--- a/MyAngularClient/package.json
+++ b/MyAngularClient/package.json
@@ -11,12 +11,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.0.0-rc.0",
+    "@angular/animations": "^7.0.0-rc.0",
+    "@angular/cdk": "^6.4.7",
     "@angular/common": "~7.0.0-rc.0",
     "@angular/compiler": "~7.0.0-rc.0",
     "@angular/core": "~7.0.0-rc.0",
+    "@angular/flex-layout": "^7.0.0-beta.19",
     "@angular/forms": "~7.0.0-rc.0",
     "@angular/http": "~7.0.0-rc.0",
+    "@angular/material": "^6.4.7",
     "@angular/platform-browser": "~7.0.0-rc.0",
     "@angular/platform-browser-dynamic": "~7.0.0-rc.0",
     "@angular/router": "~7.0.0-rc.0",
