--- a/ProductsServer/package.json
+++ b/ProductsServer/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src/server",
     "watch": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
-    "build": "tsc",
+    "build": "tsc"
   },
   "dependencies": {
     "@okta/jwt-verifier": "0.0.12",
