--- a/ProductsServer/package.json
+++ b/ProductsServer/package.json
@@ -9,16 +9,16 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@okta/jwt-verifier": "0.0.12",
-    "@types/cors": "^2.8.4",
-    "@types/express": "^4.16.0",
-    "cors": "^2.8.4",
-    "express": "^4.16.3",
-    "express-bearer-token": "^2.2.0",
-    "sqlite3": "^4.0.2",
-    "tsc": "^1.20150623.0",
-    "typeorm": "^0.2.7",
-    "typescript": "^3.1.2"
+    "@okta/jwt-verifier": "0.0.14",
+    "@types/cors": "2.8.4",
+    "@types/express": "4.16.0",
+    "cors": "2.8.4",
+    "express": "4.16.4",
+    "express-bearer-token": "2.2.0",
+    "sqlite3": "4.0.3",
+    "tsc": "1.20150623.0",
+    "typeorm": "0.2.8",
+    "typescript": "3.1.3"
   },
   "devDependencies": {
     "nodemon": "^1.18.4",
