Error event-stream@3.3.6 + Extract clientId +
Adjusts:
- Error: No matching version found for event-stream@3.3.6
- Files with configuration to no commit clientId
- Compiler errors from type

--- a/ProductsServer/package.json
+++ b/ProductsServer/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/server",
+    "start": "nodemon --exec 'ts-node' src/server.ts",
     "watch": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
     "build": "tsc"
   },
