--- a/ProductsServer/package.json
+++ b/ProductsServer/package.json
@@ -6,22 +6,22 @@
   "scripts": {
     "start": "node src/server",
     "watch": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
-    "build": "tsc"
+    "build": "npx tsc"
   },
   "dependencies": {
     "@okta/jwt-verifier": "2.1.0",
-    "@types/cors": "2.8.10",
-    "@types/express": "4.17.11",
     "cors": "2.8.5",
     "express": "4.17.1",
     "express-bearer-token": "2.4.0",
     "sqlite3": "5.0.2",
-    "tsc": "1.20150623.0",
     "typeorm": "0.2.32",
     "typescript": "4.2.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.7",
-    "ts-node": "^9.1.1"
+    "ts-node": "^9.1.1",
+    "tsc": "1.20150623.0",
+    "@types/cors": "2.8.10",
+    "@types/express": "4.17.11"
   }
 }
